# ArchBackup

./: .gitignore  01-restore-main.sh  README.md  backup-full-ssd.py  backup-full-ssd.sh  backup-netac.sh  backup-rsync.py  backup-rsync.sh  backup-usb.py  backup-usb.sh  common.py  env.sh  mkinit.sh  pyproject.toml  restore-dots.py  restore-dots.sh  restore-grub.py  restore-grub.sh  restore-main.py  restore-main.sh  restore-serv.py  restore-serv.sh  restore-service.sh
DOTS/: backup-dots.py  backup-dots.sh  restore-dots.py  restore-dots.sh  restore-qb.sh
GIT/: config  index  packed-refs
GIT/logs/refs/heads/: main
GIT/objects/pack/: pack-7107a92e5b50bec7109d18cf22d74e8e3c1dfd2c.idx  pack-7107a92e5b50bec7109d18cf22d74e8e3c1dfd2c.pack  pack-7107a92e5b50bec7109d18cf22d74e8e3c1dfd2c.rev
GIT/refs/heads/: main
MAIN/: backup-main.py  backup-main.sh  restore-main.py  restore-main.sh
SERV/: backup-all.sh
SERV/GRUB/: backup-grub.py  backup-grub.sh  restore-grub.py  restore-grub.sh
SERV/REST/: backup-rest.py  backup-rest.sh
SERV/SMB/: backup-smb.py  backup-smb.sh  restore-smb.py  restore-smb.sh
SERV/SSH/: backup-ssh.py  backup-ssh.sh  restore-ssh.py  restore-ssh.sh
SH/: backup-full-ssd.sh  backup-rsync.sh  backup-usb.sh  restore-dots.sh  restore-grub.sh  restore-main.sh  restore-serv.sh
python/: backup-full-ssd.py  backup-netac.py  backup-rsync.py  backup-usb.py  restore-dots.py  restore-grub.py  restore-main.py  restore-serv.py  restore-service.py
scripts/: auto-commit.py  common.sh
